# e-invoice

./: .gitignore  Cargo.toml  DEPLOYMENT.md  DIV_IMPLEMENTATION_STATUS.md  DIV_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  QUICKSTART.md  README.md
crates/access_point/: Cargo.toml
crates/access_point/src/: div_service.rs  div_types.rs  lib.rs  mock.rs  unifiedpost.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  models.rs  parsing.rs
crates/core/src/validation/: mod.rs  rules.rs  xsd.rs
crates/queue/: Cargo.toml
crates/queue/src/: audit.rs  lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
ui/: index.html  main.js
