[workspace]
members = [
    "src-tauri",
    "crates/core",
    "crates/access_point",
    "crates/queue",
    "crates/config",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "registry"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
quick-xml = "0.31"
roxmltree = "0.20"
notify = "6"
sled = "0.34"
keyring = "2"
confy = "0.6"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
async-trait = "0.1"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
