[package]
name = "latvian_einvoice_app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
walkdir = { workspace = true }
chrono = { workspace = true }

# local crates
lat_einv_core = { path = "../crates/core" }
access_point = { package = "lat_einv_access_point", path = "../crates/access_point" }
queue = { package = "lat_einv_queue", path = "../crates/queue" }
config = { package = "lat_einv_config", path = "../crates/config" }

# tauri (use selected API features)
tauri = { version = "1", features = [ "shell-open", "fs-read-dir", "dialog-open", "fs-read-file" ] }
tauri-build = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }
base64 = "0.22"

[features]
default = []
