[package]
name = "lat_einv_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lat_einv_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
roxmltree = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
